src/test/deca/context/valid/method_named_int.deca
// Contextuellement, il est possible d'appeler une méthode comme int

class A {
    int int(){
        return 5;
    }   
}