src/test/deca/context/invalid/return_void_method.deca
// Test la règle 3.24: Pas le droit de return une méthode
//  alors qu'on attend pas de return

class A  {

    int getInt(){
        return 5;
    }

    void voidMethod(int x){
        return getInt();
    }
}



// Resultat:
//TODOTEST
